# rsbuild

./: .gitignore  .markdownlint.json  .spellcheck-words  .tools.versions  CLAUDE.md  Cargo.toml  Makefile  PROCESSOR_CONTRACT.md  README.md  SUGGESTIONS.md  build.rs  build_dev.sh  design.md  features.txt  problem.txt  problems.txt  pyproject.toml  rsb.toml  test.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: book.toml
docs/processors/: cc.md  template.md
docs/src/: SUMMARY.md  advanced.md  analyzers.md  architecture.md  binary-releases.md  cache.md  cc-details.md  coding-standards.md  commands.md  configuration.md  crates-io.md  cross-processor-dependencies.md  dependency-caching.md  design.md  getting-started.md  installation.md  internal-processors.md  introduction.md  nomenclature.md  plugins.md  processor-contract.md  processor-types.md  processors.md  project-structure.md  rejected-problems.md  remote-caching.md  suggestions-done.md  suggestions.md  testing.md  todo.md
src/: build_context.rs  builder.rs  checksum.rs  cli.rs  color.rs  config.rs  db.rs  deps_cache.rs  errors.rs  executor.rs  exit_code.rs  file_index.rs  graph.rs  json_output.rs  linter.rs  main.rs  object_store.rs  platform.rs  processor.rs  progress.rs  registry.rs  remote_cache.rs  runtime_flags.rs  template.rs  tool_lock.rs  watcher.rs  webcache.rs
src/analyzers/: cpp.rs  icpp.rs  markdown.rs  mod.rs  python.rs  tera.rs
src/builder/: add_config.rs  analyzers.rs  build.rs  clean.rs  config_cmd.rs  deps.rs  doctor.rs  fix.rs  graph.rs  mod.rs  processors.rs  sloc.rs  smart.rs  tools.rs
src/config/: analyzer_configs.rs  mod.rs  processor_configs.rs  provenance.rs  tests.rs
src/executor/: execution.rs  handlers.rs  mod.rs
src/object_store/: blobs.rs  checksums.rs  descriptors.rs  (+4 more)
tests/: build.rs  cache.rs  integration_test.rs  main.rs  processors.rs
(+339 files in other folders)
