[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytconf"
version = "0.1.21"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Configuration, command line and injection framework for python"
readme = "README.md"
license = "MIT"
keywords=[
    "click",
    "argparse",
    "optparse",
    "command-line-parser",
    "configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "termcolor",
    "yattag",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pytconf"
"Bug Tracker" = "https://github.com/veltzer/pytconf/issues"
"Documentation" = "https://veltzer.github.io/pytconf"
"Download" = "https://pypi.org/project/pytconf/"
"Repository" = "https://github.com/veltzer/pytconf"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytconf"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pytconf/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
